seeder/traefik/traefik.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-system

---

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik
spec:
  controller: traefik.io/ingress-controller


---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: ingress-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik
      tolerations:
        - key: "node-role"
          operator: "Equal"
          value: "edge"
          effect: "NoExecute"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role
                operator: In
                values:
                - edge
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: traefik
              topologyKey: kubernetes.io/hostname
      containers:
        - name: traefik
          image: traefik:v3.0
          args:
            # Kubernetes providers
            - "--providers.kubernetescrd"
            - "--providers.kubernetesingress"
            - "--providers.kubernetesingress.ingressclass=traefik"

            # EntryPoints
            - "--entrypoints.web.address=:80"

            - "--entrypoints.websecure.address=:443"
            - "--entrypoints.websecure.http.tls=true"

            # Logs
            - "--log.level=INFO"
            - "--accesslog=true"

            # API (désactivée par défaut)
            - "--api.dashboard=false"

          ports:
            - name: web
              containerPort: 80


---

apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: ingress-system
spec:
  type: NodePort
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      targetPort: 80
      nodePort: 30080   # 🔒 contractuel
    - name: websecure
      port: 443
      targetPort: 443
      nodePort: 30443
